force-app/main/default/objects/NB2B_CountryTaxes__mdt/NB2B_CountryTaxes__mdt.object-meta.xml
<CustomObject>
    <label>Country Tax</label>
    <pluralLabel>Country Taxes</pluralLabel>
</CustomObject>