force-app/main/default/objects/NB2B_CountryTaxes__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>4</length>
    <type>Text</type>
</CustomField>