force-app/main/default/objects/NB2B_CountryTaxes__mdt/fields/NB2B_Country__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Country__c</fullName>
    <label>Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>