force-app/main/default/objects/NB2B_CountryTaxes__mdt/fields/NB2B_Taxes__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Taxes__c</fullName>
    <label>Taxes</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>