force-app/main/default/objects/NB2B_CountryTaxes__mdt/fields/NB2B_TaxName__c.field-meta.xml
<CustomField>
    <fullName>NB2B_TaxName__c</fullName>
    <label>Tax Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>